# gpu_cpu_optimization

./: CMakeLists.txt  README.md  gpu_cpu_optimization_explained_with_scenario_diagrams.md
docs/: interview_mapping.md
include/: cuda_check.hpp
scripts/: diagnose_cuda_binary.sh  export_ncu_csv.sh  nvdisasm_quick.sh  profile_ncu.sh  run_all.sh
src/: gpu_cpu_optimization.cu
